adds crud for google map

--- a/app/views/gmaps/index.html.erb
+++ b/app/views/gmaps/index.html.erb
@@ -32,6 +32,7 @@
         var drawingManager = new google.maps.drawing.DrawingManager({
           drawingMode: google.maps.drawing.OverlayType.MARKER,
           drawingControl: true,
+          editable: true,
           drawingControlOptions: {
             position: google.maps.ControlPosition.TOP_CENTER,
             drawingModes: [
