--- a/app/views/gmaps/_show_polygon.html.erb
+++ b/app/views/gmaps/_show_polygon.html.erb
@@ -32,10 +32,58 @@
 	    strokeOpacity: 0.8,
 	    strokeWeight: 2,
 	    fillColor: '#FF0000',
-	    fillOpacity: 0.35
+	    fillOpacity: 0.35,
+	    editable: true
 	  });
 	  bermudaTriangle.setMap(map);
+
+    // Add a listener for the click event.
+	  bermudaTriangle.addListener('click', showArrays);
+	  infoWindow = new google.maps.InfoWindow;
+
+	  /** @this {google.maps.Polygon} */
+		function showArrays(event) {
+		  // Since this polygon has only one path, we can call getPath() to return the
+		  // MVCArray of LatLngs.
+		  var vertices = this.getPath();
+
+		  var contentString = '<b>Bermuda Triangle polygon</b><br>' +
+		      'Clicked location: <br>' + event.latLng.lat() + ',' + event.latLng.lng() +
+		      '<br>';
+
+		  // Iterate over the vertices.
+		  for (var i =0; i < vertices.getLength(); i++) {
+		  	var coordinateArray = [];
+        var xy = vertices.getAt(i);
+        coordinateArray[0] = xy.lng();
+        coordinateArray[1] = xy.lat();
+        polyArray.push(coordinateArray);
+		    contentString += '<br>' + 'Coordinate ' + i + ':<br>' + xy.lat() + ',' +
+		        xy.lng();
+		  }
+
+		  // Replace the info window's content and position.
+		  infoWindow.setContent(contentString);
+		  infoWindow.setPosition(event.latLng);
+
+		  infoWindow.open(map);
+		}
 	}
+
+	$(".save-polygon").on("click",function(){
+    console.log(polyArray);
+    $.ajax({
+      url: "<%= save_polygon_gmaps_path %>",
+      type:"GET",
+      data: {polygon: polyArray},
+      success: function(){
+        console.log("saved")
+      },
+      error: function(){
+         console.log('failure');
+      }
+    });
+  });
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?AIzaSyAy-aeAcZK-K6tgvpxgP0paHYnC8oakqNM&libraries=drawing&callback=initMap"
      async defer></script>
