--- a/app/views/gmaps/_show_polygon.html.erb
+++ b/app/views/gmaps/_show_polygon.html.erb
@@ -14,7 +14,7 @@
 
 <script>
   // This example creates a simple polygon representing the Bermuda Triangle.
-
+  var polyArray = [];
 	function initMap() {
 	  var map = new google.maps.Map(document.getElementById('map'), {
 	    zoom: 15,
@@ -73,7 +73,7 @@
 	$(".save-polygon").on("click",function(){
     console.log(polyArray);
     $.ajax({
-      url: "<%= save_polygon_gmaps_path %>",
+      url: "<%= save_updated_polygon_gmaps_path %>",
       type:"GET",
       data: {polygon: polyArray},
       success: function(){
