--- a/app/views/gmaps/show_map.html.erb
+++ b/app/views/gmaps/show_map.html.erb
@@ -16,6 +16,9 @@ Lng : <input id="lng" class="lng" name="lng" type="lng" /> <br/>
 
 <button type="button" class="btn btn-default show-polygon"> Show Polygon </button>
 
+<button type="button" class="btn btn-default save-polygon"> Save Polygon </button>
+
+
 <div id="map"></div>
 <script>
 	$(function(){
