--- a/app/views/gmaps/show_map.html.erb
+++ b/app/views/gmaps/show_map.html.erb
@@ -7,16 +7,31 @@
    border-color: #fff;
    border-style: solid;
    box-shadow: 2px 2px 10px #B1B1B1;
-   margin-top: 25px;
    border-width: 7px;
  }
+ .map-form {
+  margin-left: 10%;
+ }
 </style>	
-Lat : <input id="lat" class="lat" name="lat" type="lat" /> <br/>
-Lng : <input id="lng" class="lng" name="lng" type="lng" /> <br/>
 
-<button type="button" class="btn btn-default show-polygon"> Show Polygon </button>
+<div class="map-form">
+      <div class="form-group">
+        <div class="col-sm-6">
+        Lat : <input id="lat" class="lat form-control" name="lat" type="lat" /> 
+        Lng : <input id="lng" class="lng form-control" name="lng" type="lng" /> 
+        
+        OR
 
-<button type="button" class="btn btn-default save-polygon"> Save Polygon </button>
+        Polygon Name : <input id="poly-name form-control" class="poly-name"/> <br/>
+
+        <button type="button" class="btn btn-default show-polygon"> Show Polygon </button>
+
+        <button type="button" class="btn btn-default save-polygon"> Save Polygon </button>
+        </div>
+      </div>
+    </div>
+
+
 
 
 <div id="map"></div>
@@ -25,12 +40,14 @@ Lng : <input id="lng" class="lng" name="lng" type="lng" /> <br/>
 		$(".show-polygon").on("click",function(){
 			var lat = $(".lat").val();
 			var lng = $(".lng").val();
+      var polyName = $(".poly-name").val();
 
       $.ajax({
         url: "<%= show_polygon_gmaps_path %>",
         type:"GET",
         data: {lat: lat,
-        			 lng: lng },
+        			 lng: lng,
+               name: polyName },
         success: function(){
           console.log("saved")
         },
